force-app/main/default/objects/Extraction_Request__c/Extraction_Request__c.object-meta.xml
<CustomObject>
    <description>APR0127266 - Need to create an easy, efficient process for Sales to submit extraction requests to Service</description>
    <label>Extraction Request</label>
    <nameField>
        <displayFormat>ER-{00000}</displayFormat>
        <label>Extraction Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Extraction Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>