force-app/main/default/objects/Extraction_Request__c/fields/Reassign_to_Queue__c.field-meta.xml
<CustomField>
    <fullName>Reassign_to_Queue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reassign to Queue</label>
    <type>Checkbox</type>
</CustomField>