force-app/main/default/objects/Extraction_Request__c/fields/Service_Location__c.field-meta.xml
<CustomField>
    <fullName>Service_Location__c</fullName>
    <label>Service Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advantage Corporate Operations 0610</fullName>
            </value>
            <value>
                <fullName>Advantage Operations Auburn 0611</fullName>
            </value>
            <value>
                <fullName>Advantage Operations Chicago 0613</fullName>
            </value>
            <value>
                <fullName>Advantage Operations Dallas 0621</fullName>
            </value>
            <value>
                <fullName>Advantage Operations Orange County 0616</fullName>
            </value>
            <value>
                <fullName>Advantage Operations Providence 0609</fullName>
            </value>
            <value>
                <fullName>Advantage Operations Rock Hill 0614</fullName>
            </value>
            <value>
                <fullName>Advantage Operations San Leandro 0618</fullName>
            </value>
            <value>
                <fullName>Advantage Operations Sarasota 0619</fullName>
            </value>
            <value>
                <fullName>Akron Branch 0049</fullName>
            </value>
            <value>
                <fullName>Albany Branch 0015</fullName>
            </value>
            <value>
                <fullName>Albuquerque Branch 0904</fullName>
            </value>
            <value>
                <fullName>Atlanta Branch 0035</fullName>
            </value>
            <value>
                <fullName>Auburn Branch 0069</fullName>
            </value>
            <value>
                <fullName>Baltimore Branch 0030</fullName>
            </value>
            <value>
                <fullName>Birmingham Branch 0037</fullName>
            </value>
            <value>
                <fullName>Boston Branch 0011</fullName>
            </value>
            <value>
                <fullName>Buffalo Branch 0045</fullName>
            </value>
            <value>
                <fullName>Charlotte Branch 0033</fullName>
            </value>
            <value>
                <fullName>Chicago Branch 0052</fullName>
            </value>
            <value>
                <fullName>Cleveland Branch 0047</fullName>
            </value>
            <value>
                <fullName>Columbus Branch 0044</fullName>
            </value>
            <value>
                <fullName>Dallas/Fort Worth Branch 0072</fullName>
            </value>
            <value>
                <fullName>Dayton Branch 0043</fullName>
            </value>
            <value>
                <fullName>Denver Branch 0065</fullName>
            </value>
            <value>
                <fullName>Detroit Branch 0050</fullName>
            </value>
            <value>
                <fullName>East Bay Branch 0088</fullName>
            </value>
            <value>
                <fullName>Fort Myers Branch 0903</fullName>
            </value>
            <value>
                <fullName>Foxboro Branch 0008</fullName>
            </value>
            <value>
                <fullName>Fresno Branch 0087</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>