force-app/main/default/objects/Extraction_Request__c/fields/Submission_Method__c.field-meta.xml
<CustomField>
    <fullName>Submission_Method__c</fullName>
    <label>Submission Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PACO</fullName>
            </value>
            <value>
                <fullName>Easy Onboarding Submission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>