force-app/main/default/objects/Extraction_Request__c/fields/X1099_Employees__c.field-meta.xml
<CustomField>
    <fullName>X1099_Employees__c</fullName>
    <description>Required Field</description>
    <label>1099 Employees?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>