force-app/main/default/objects/Extraction_Request__c/listViews/Created_by_Matt_Rugen.listView-meta.xml
<ListView>
    <fullName>Created_by_Matt_Rugen</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Client_Name__c</columns>
    <columns>Sales_Rep_Name__c</columns>
    <columns>Service_Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Matthew Rugen</value>
    </filters>
    <filters>
        <field>Sales_Rep_Name__c</field>
        <operation>equals</operation>
        <value>Jennifer Hepler,Caroline Hughes,Jenny Blake,Matthew DeSimone,Kathleen Aaskov,Gary Adams</value>
    </filters>
    <label>Created by Matt Rugen</label>
</ListView>