force-app/main/default/objects/Extraction_Request__c/listViews/New_Extraction_Requests_from_Sales.listView-meta.xml
<ListView>
    <fullName>New_Extraction_Requests_from_Sales</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Date_Time_Opened__c</columns>
    <columns>Client_Name__c</columns>
    <columns>Contact_Email__c</columns>
    <columns>Federal_ID_Number__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Payroll_Current_Prior_Method__c</columns>
    <columns>Date_final_payroll_processed__c</columns>
    <columns>X1099_Employees__c</columns>
    <columns>Per_pay_period_extraction_required__c</columns>
    <columns>Number_of_IDs__c</columns>
    <columns>Run_Effective_Date__c</columns>
    <columns>ERTC__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed - Client Unresponsive</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed - Rejected</value>
    </filters>
    <label>Open Extraction Requests from Sales</label>
    <sharedTo>
        <group>IMP_Managers_Supervisors</group>
        <group>MPSC</group>
        <group>MPSC_Audit_Group</group>
        <group>MPSC_Imp_Support</group>
        <group>MPSC_Management_Team</group>
        <group>MPSC_New_Business_Team</group>
        <group>MPSC_New_Client_Data_Entry</group>
    </sharedTo>
</ListView>